[gd_scene load_steps=11 format=2]

[ext_resource path="res://VillageTilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/ResourceBackground.png" type="Texture" id=2]
[ext_resource path="res://ResourceTileMap.gd" type="Script" id=3]
[ext_resource path="res://Resources.gd" type="Script" id=4]
[ext_resource path="res://ResourceUI.gd" type="Script" id=5]
[ext_resource path="res://Village.gd" type="Script" id=6]
[ext_resource path="res://ResourceCoutnerUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/VillageBackground.png" type="Texture" id=8]
[ext_resource path="res://MyDefaultTheme.tres" type="Theme" id=9]
[ext_resource path="res://TileUI.tscn" type="PackedScene" id=10]

[node name="Main" type="Node2D"]

[node name="Villages" type="Node2D" parent="."]

[node name="Village" type="Node2D" parent="Villages"]
script = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="Villages/Village"]
visible = false
offset = Vector2( 128, 128 )
current = true
zoom = Vector2( 2.3, 2.3 )

[node name="CanvasLayer" type="CanvasLayer" parent="Villages/Village"]

[node name="ButtonResources" type="Button" parent="Villages/Village/CanvasLayer"]
margin_left = 22.0
margin_top = 8.0
margin_right = 188.0
margin_bottom = 50.0
theme = ExtResource( 9 )
text = "Resources"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCenter" type="Button" parent="Villages/Village/CanvasLayer"]
margin_left = 204.0
margin_top = 7.0
margin_right = 374.0
margin_bottom = 51.0
theme = ExtResource( 9 )
text = "Center"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourceCoutnerUI" parent="Villages/Village/CanvasLayer" instance=ExtResource( 7 )]
margin_left = 23.5103
margin_top = 65.2636
margin_right = -713.49
margin_bottom = -159.736
rect_scale = Vector2( 0.5, 0.5 )

[node name="Resources" type="Node2D" parent="Villages/Village"]
script = ExtResource( 4 )

[node name="ResourceBackground" type="Sprite" parent="Villages/Village/Resources"]
position = Vector2( 148.358, 141.759 )
scale = Vector2( 1.26762, 1.33733 )
texture = ExtResource( 2 )

[node name="ResourceTileMap" type="TileMap" parent="Villages/Village/Resources"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 256, 227 )
cell_half_offset = 0
format = 1
script = ExtResource( 3 )

[node name="ResourceLevelsUI" type="Control" parent="Villages/Village/Resources"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="Villages/Village/Resources"]

[node name="TileUI" parent="Villages/Village/Resources/CanvasLayer" instance=ExtResource( 10 )]
visible = false
margin_left = 323.0
margin_top = 102.0
margin_right = -351.0
margin_bottom = -76.0

[node name="Center" type="Node2D" parent="Villages/Village"]
visible = false

[node name="VillageBackground" type="Sprite" parent="Villages/Village/Center"]
position = Vector2( 128.295, 128.639 )
scale = Vector2( 1.22949, 1.27718 )
texture = ExtResource( 8 )

[node name="TextureButton" type="TextureButton" parent="Villages/Village/Center"]
margin_left = -9.91068
margin_top = 28.2245
margin_right = 112.089
margin_bottom = 146.225
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Villages/Village/CanvasLayer/ButtonResources" to="Villages/Village" method="_on_ButtonResources_pressed"]
[connection signal="pressed" from="Villages/Village/CanvasLayer/ButtonCenter" to="Villages/Village" method="_on_ButtonCenter_pressed"]
